--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.2.0",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "emoji-picker-react": "^4.4.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
